--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,11 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/statics/style.css">
+    <script src="/statics/script.js"></script>
 </head>
 
 <body class="main">
     <header>
-        <div class="container text-center py-4">
+        <div class="container text-center mt-5 py-4">
             <div class="row">
                 <div class="col">
                     <img src="statics/logo.png" alt="logo.png" class="mb-3">
@@ -24,7 +25,7 @@
         </div>
     </header>
 
-    <main class="d-flex flex-column align-items-center justify-content-start min-vh-100 py-5">
+    <main class="d-flex flex-column align-items-center justify-content-start min-vh-100 py-4">
         <ul class="nav nav-tabs mb-4 justify-content-center">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Upload</a>
@@ -34,15 +35,24 @@
             </li>
         </ul>
 
-        <div class="upload-form d-flex flex-column align-items-center text-center p-4 mb-4">
+        <div class="upload-form d-flex flex-column align-items-center text-center p-4 mb-4 w-50">
             <img src="statics/upload.png" alt="upload.png" class="img-fluid my-5">
             <p class="mb-1">Select a file or drag and drop here</p>
             <p class="text-muted small">Only support .jpg, .png and gif.<br>Maximum file size is 5MB</p>
         </div>
         <div>
-            <button type="button" class="btn btn-primary px-4 py-2">BROWSE YOUR FILE</button>
+            <button type="button" class="btn btn-primary px-4 py-2 mb-5">BROWSE YOUR FILE</button>
         </div>
-
+        <div class="d-flex flex-column align-items-start text-start mb-4 w-50">
+            <p class="mb-1 fw-bold ">Current Upload</p>
+            <div class="url-form d-flex align-items-center py-1 px-2 w-100">
+                <input id="uploadLink" class="form-control border-0 text-mute bg-white me-2" value="https://..."
+                    disabled readonly></input>
+                <button type="button" class="btn-copy btn btn-sm btn-primary align-items-right"
+                    onclick="copyToClipboard()">Copy</button>
+            </div>
+            <div class="alert-container w-100"></div>
+        </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
