--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="container text-center mt-5 py-4">
             <div class="row">
-                <div class="col">
+                <div class="col-12">
                     <img src="statics/logo.png" alt="logo.png" class="mb-3">
                     <h1 class="mb-2">Upload Photos</h1>
                     <p class="text-muted">Upload selfies, memes, or any fun pictures here.</p>
@@ -35,13 +35,18 @@
             </li>
         </ul>
 
+        <form action="/upload" enctype="multipart/form-data" method="post">
+            <input type="file" name="file" accept=".jpg, .jpeg, .png, .gif" required>
+            <input type="submit" value="Загрузить">
+        </form>
+
         <div class="upload-form d-flex flex-column align-items-center text-center p-4 mb-4 w-50">
             <img src="statics/upload.png" alt="upload.png" class="img-fluid my-5">
             <p class="mb-1">Select a file or drag and drop here</p>
             <p class="text-muted small">Only support .jpg, .png and gif.<br>Maximum file size is 5MB</p>
         </div>
         <div>
-            <button type="button" class="btn btn-primary px-4 py-2 mb-5">BROWSE YOUR FILE</button>
+            <button type="button" class="btn btn-primary px-4 py-2 mb-5 text-uppercase">browse your file</button>
         </div>
         <div class="d-flex flex-column align-items-start text-start mb-4 w-50">
             <p class="mb-1 fw-bold ">Current Upload</p>
@@ -52,6 +57,21 @@
                     onclick="copyToClipboard()">Copy</button>
             </div>
             <div class="alert-container w-100"></div>
+        </div>
+
+        <div class="container text-center mt-5 py-4">
+            <div class="row">
+                <div class="col-md-6 text-center align-items-center">
+                    <p class="mb-1 fw-bold ">Current Upload</p>
+                    <div class="url-form d-flex align-items-center py-1 px-2">
+                        <input id="uploadLink" class="form-control border-0 text-mute bg-white me-2" value="https://..."
+                            disabled readonly></input>
+                        <button type="button" class="btn-copy btn btn-sm btn-primary align-items-right"
+                            onclick="copyToClipboard()">Copy</button>
+                    </div>
+                    <div class="alert-container w-100"></div>
+                </div>
+            </div>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
