--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,9 +17,11 @@
         <div class="container text-center mt-5 py-4">
             <div class="row">
                 <div class="col-12">
-                    <img src="statics/logo.png" alt="logo.png" class="mb-3">
-                    <h1 class="mb-2">Upload Photos</h1>
-                    <p class="text-muted">Upload selfies, memes, or any fun pictures here.</p>
+                    <a href="/" class="text-reset text-decoration-none">
+                        <img src="statics/logo.png" alt="logo.png" class="mb-3">
+                        <h1 class="mb-2">Upload Photos</h1>
+                        <p class="text-muted">Upload selfies, memes, or any fun pictures here.</p>
+                    </a>
                 </div>
             </div>
         </div>
@@ -35,31 +37,32 @@
             </li>
         </ul>
 
-        <form action="/upload" enctype="multipart/form-data" method="post"
+        <form action="/" enctype="multipart/form-data" method="post"
             class="upload-form d-flex flex-column align-items-center text-center p-4 mb-4 w-50">
             <img src="statics/upload.png" alt="upload.png" class="img-fluid my-5">
             <p class="mb-1">Select a file or drag and drop here</p>
             <p class="text-muted small">Only support .jpg, .png and gif.<br>Maximum file size is 5MB</p>
-            <div class="file-selected-container"></div>
             <label for="file-upload" class="file-choose-container btn btn-outline-primary mb-3 px-4 py-2"
                 onchange="onFileSelected(event)">
                 Choose image
                 <input id="file-upload" type="file" name="file" accept=".jpg,.jpeg,.png,.gif" required hidden>
             </label>
-
+            <div class="file-selected-container"></div>
         </form>
-
+        {% if status == "OK" %}
         <div class="d-flex flex-column align-items-start text-start mb-4 w-50">
             <p class="mb-1 fw-bold ">Current Upload</p>
             <div class="url-form d-flex align-items-center py-1 px-2 w-100">
-                <input id="uploadLink" class="form-control border-0 text-mute bg-white me-2" value="https://..."
-                    disabled readonly></input>
+                <input id="uploadLink" class="form-control border-0 text-mute bg-white me-2" value="{{ url }}" disabled
+                    readonly></input>
                 <button type="button" class="btn-copy btn btn-sm btn-primary align-items-right"
                     onclick="copyToClipboard()">Copy</button>
             </div>
             <div class="alert-container w-100"></div>
         </div>
+        {% endif %}
     </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
