--- a/app/templates/images.html
+++ b/app/templates/images.html
@@ -30,40 +30,46 @@
     <main class="d-flex flex-column align-items-center justify-content-start min-vh-100 py-4">
         <ul class="nav nav-tabs mb-4 justify-content-center">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Upload</a>
+                <a class="nav-link" href="/">Upload</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/images">Images</a>
+                <a class="nav-link active" aria-current="page" href="/images">Images</a>
             </li>
         </ul>
 
-        <form action="/" enctype="multipart/form-data" method="post"
-            class="upload-form d-flex flex-column align-items-center text-center p-4 mb-4 w-50">
-            <img src="statics/upload.png" alt="upload.png" class="img-fluid my-5">
-            <p class="mb-1">Select a file or drag and drop here</p>
-            <p class="text-muted small">Only support .jpg, .png and gif.<br>Maximum file size is 5MB</p>
-            <label for="file-upload" class="file-choose-container btn btn-outline-primary mb-3 px-4 py-2"
-                onchange="onFileSelected(event)">
-                Choose image
-                <input id="file-upload" type="file" name="file" accept=".jpg,.jpeg,.png,.gif" required hidden>
-            </label>
-            <div class="file-selected-container"></div>
-        </form>
         {% if status == "OK" %}
-        <div class="d-flex flex-column align-items-start text-start mb-4 w-50">
-            <p class="mb-1 fw-bold ">Current Upload</p>
-            <div class="url-form d-flex align-items-center py-1 px-2 w-100">
-                <input id="uploadLink" class="form-control border-0 text-mute bg-white me-2" value="{{ url }}" disabled
-                    readonly></input>
-                <button type="button" class="btn-copy btn btn-sm btn-primary align-items-right"
-                    onclick="copyToClipboard()">Copy</button>
+        <div class="container text-center p-4 w-50">
+            <div class="row fw-bold pb-2 mb-2 bg-blue-400">
+                <div class="col-2">
+                    Image
+                </div>
+                <div class="col-8">
+                    URL
+                </div>
+                <div class="col-2 text-end">
+                    Delete
+                </div>
             </div>
-            <div class="alert-container w-100"></div>
+            {% for item in images %}
+
+            <div class="row align-items-center mb-2">
+                <div class="col-2">
+                    <img src="{{ item.url }}" class="img-thumbnail img-fluid me-3 rounded" style="max-height: 60px;"
+                        alt="preview">
+                </div>
+                <div class="col-8 text-break">
+                    <a href="{{ item.url }}" class="text-decoration-none text-primary">{{ item.name }}</a>
+                </div>
+                <div class="col-2 text-end">
+                    <img src="statics/delete.png" alt="delete.ico" class="btn btn-sm btn-danger rounded">
+                </div>
+            </div>
+            {% endfor %}
         </div>
         {% endif %}
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
 </body>
