--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -60,6 +60,13 @@
             </div>
             <div class="alert-container w-100"></div>
         </div>
+        {% elif status == "ERROR" %}
+        <div class="d-flex flex-column align-items-start text-start mb-4 w-50">
+            <div class="alert alert-danger alert-dismissible fade show w-100 mt-2 py-1">
+                Upload Failed! Details: {{ detail }} <button type="button" class="btn-close py-2"
+                    data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        </div>
         {% endif %}
     </main>
 
