--- a/app/templates/images.html
+++ b/app/templates/images.html
@@ -36,7 +36,7 @@
                 <a class="nav-link active" aria-current="page" href="/images">Images</a>
             </li>
         </ul>
-
+        <div class="alert-container w-100"></div>
         {% if status == "OK" %}
         <div class="container text-center p-4 w-50">
             <div class="row fw-bold pb-2 mb-2 bg-blue-400">
@@ -61,12 +61,31 @@
                     <a href="{{ item.url }}" class="text-decoration-none text-primary">{{ item.name }}</a>
                 </div>
                 <div class="col-2 text-end">
-                    <img src="statics/delete.png" alt="delete.ico" class="btn btn-sm btn-danger rounded">
+                    <img src="statics/delete.png" alt="delete.ico" class="btn btn-sm btn-danger rounded"
+                        data-bs-toggle="modal" data-bs-target="#errorModal">
                 </div>
             </div>
             {% endfor %}
         </div>
         {% endif %}
+
+        <!-- Modal -->
+        <div class="modal fade" id="errorModal" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="errorModalLabel">Forbidden</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        No access!
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
