--- a/app/templates/images.html
+++ b/app/templates/images.html
@@ -46,7 +46,7 @@
                 <div class="col-8">
                     URL
                 </div>
-                <div class="col-2 text-end">
+                <div class="col-2">
                     Delete
                 </div>
             </div>
@@ -54,13 +54,14 @@
 
             <div class="row align-items-center mb-2">
                 <div class="col-2">
-                    <img src="{{ item.url }}" class="img-thumbnail img-fluid me-3 rounded" style="max-height: 60px;"
+                    <img src="{{ item.url }}" class="img-thumbnail me-3 rounded"
+                        style="min-height: 40px; min-width: 40px; max-height: 60px; width: auto; height: auto;"
                         alt="preview">
                 </div>
                 <div class="col-8 text-break">
                     <a href="{{ item.url }}" class="text-decoration-none text-primary">{{ item.name }}</a>
                 </div>
-                <div class="col-2 text-end">
+                <div class="col-2">
                     <img src="statics/delete.png" alt="delete.ico" class="btn btn-sm btn-danger rounded"
                         data-bs-toggle="modal" data-bs-target="#errorModal">
                 </div>
