--- a/app/templates/images.html
+++ b/app/templates/images.html
@@ -36,7 +36,21 @@
                 <a class="nav-link active" aria-current="page" href="/images">Images</a>
             </li>
         </ul>
-        <div class="alert-container w-100"></div>
+        {% if deleted == True %}
+        <div class="d-flex flex-column align-items-start text-start mb-4 w-50">
+            <div class="alert alert-success alert-dismissible fade show w-100 mt-2 py-1">
+                Image deleted! <button type="button" class="btn-close py-2" data-bs-dismiss="alert"
+                    aria-label="Close"></button>
+            </div>
+        </div>
+        {% elif deleted == False %}
+        <div class="d-flex flex-column align-items-start text-start mb-4 w-50">
+            <div class="alert alert-danger alert-dismissible fade show w-100 mt-2 py-1">
+                Can't delete! <button type="button" class="btn-close py-2" data-bs-dismiss="alert"
+                    aria-label="Close"></button>
+            </div>
+        </div>
+        {% endif %}
         {% if status == "OK" %}
         <div class="container text-center p-4 w-50">
             <div class="row fw-bold pb-2 mb-2 bg-blue-400">
@@ -63,35 +77,61 @@
                 </div>
                 <div class="col-2">
                     <img src="statics/delete.png" alt="delete.ico" class="btn btn-sm btn-danger rounded"
-                        data-bs-toggle="modal" data-bs-target="#errorModal">
+                        data-bs-toggle="modal" data-bs-target="#deleteModal" data-bs-item-name="{{ item.name }}">
                 </div>
             </div>
             {% endfor %}
         </div>
-        {% endif %}
+
 
         <!-- Modal -->
-        <div class="modal fade" id="errorModal" tabindex="-1" aria-labelledby="errorModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
+        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="errorModalLabel">Forbidden</h5>
+                        <h5 class="modal-title" id="deleteModalLabel">Delete image</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        No access!
+                        <form id="deleteForm" action="/delete" method="post"
+                            class="d-flex flex-column align-items-center text-center p-4 mb-4">
+                            <input type="hidden" class="form-control" id="imageName" name="image_name">
+                            <div class="mb-1 row">
+                                <label for="inputApiKey" class="col-3 col-form-label">API Key</label>
+                                <div class="col-9">
+                                    <input type="text" class="form-control" id="inputApiKey" name="api_key">
+
+                                </div>
+                            </div>
+                        </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal"
+                            form="deleteForm">Confirm</button>
                     </div>
                 </div>
             </div>
         </div>
+        {% endif %}
     </main>
 
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
+    <script>
+        const exampleModal = document.getElementById('deleteModal')
+        if (exampleModal) {
+            exampleModal.addEventListener('show.bs.modal', event => {
+                const button = event.relatedTarget
+                const imageName = button.getAttribute('data-bs-item-name')
+
+                const modalTitle = exampleModal.querySelector('.modal-title')
+                const modalBodyInput = exampleModal.querySelector('.modal-body input')
+                modalBodyInput.value = imageName
+            })
+        }
+    </script>
 </body>
 
 </html>
