hide api key input

--- a/app/templates/images.html
+++ b/app/templates/images.html
@@ -99,8 +99,7 @@
                             <div class="mb-1 row">
                                 <label for="inputApiKey" class="col-3 col-form-label">API Key</label>
                                 <div class="col-9">
-                                    <input type="text" class="form-control" id="inputApiKey" name="api_key">
-
+                                    <input type="password" class="form-control" id="inputApiKey" name="api_key">
                                 </div>
                             </div>
                         </form>
