--- a/app/templates/images.html
+++ b/app/templates/images.html
@@ -94,6 +94,39 @@
                 </div>
             </div>
             {% endfor %}
+            <div class="row align-items-center mb-2">
+                <ul class="nav nav-tabs mt-2 justify-content-center">
+                    {% if current_page != 1 %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="?page={{ current_page - 1 }}">Previous</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="?page={{ current_page - 1 }}">Previous</a>
+                    </li>
+                    {% endif %}
+                    {% for i in range(1, total_pages+1) %}
+                    {% if i == current_page %}
+                    <li class="nav-item">
+                        <a class="nav-link active" href="?page={{ i }}"><b>{{ i }}</b></a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="?page={{ i }}">{{ i }}</a>
+                    </li>
+                    {% endif %}
+                    {% endfor %}
+                    {% if current_page != total_pages %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="?page={{ current_page + 1 }}">Next</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="?page={{ current_page + 1 }}">Next</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
 
 
